# envgpt

./: .readthedocs.yml  LICENSE  README.md  environment-min.yml  environment.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-cd.yml
docs/source/: CHANGELOG.md  conf.py  index.rst
docs/source/_templates/: CHANGELOG.md
docs/source/_templates/docs/: sidebarintro.html
docs/source/_templates/docs/source/_templates/: sidebarlogo.html
docs/source/dev/: contributing.rst  design.rst  maintaining.rst
docs/source/user/: api.rst  quickstart.rst  support.rst
src/envgpt/: __init__.py  envgpt.py
tests/: test_envgpt.py
