[tool.poetry]
name = "envgpt"
version = "0.0.0"
description = "ATesting OntoGPT on Environmental Data Packages"
authors = ["Colin Smith <colin.smith@wisc.edu>"]
maintainers = ["Colin Smith <colin.smith@wisc.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ontogpt = "^1.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
sphinx = "^8.1.3"
sphinx-autoapi = "^3.3.3"
myst-parser = "^4.0.0"
pylint = "^3.3.1"
black = "^24.10.0"
python-semantic-release = "^9.12.0"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"] # version location
branch = "main"                             # branch to make releases of
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-convert GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = false                   # patch release by default

[tool.semantic_release.changelog]
template_dir = "docs/source/_templates/"    # changelog template directory

[tool.pylint.'MESSAGES.CONTROL']
disable = "too-many-public-methods,c-extension-no-member"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"